fixed button spacing

--- a/src/app.css
+++ b/src/app.css
@@ -71,3 +71,7 @@ h4 {
     font-family:'Times New Roman', Times, serif;
     padding: 10px;
 }
+
+.btn {
+    margin: 5px !important;
+}
